l10n: Updates to French (fr) translation
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,12 @@
 # Decroux Fabien <fdecroux@redhat.com>, 2006.
 # Gauthier Ancelin <gauthier.ancelin@laposte.net>, 2007, 2008.
 # Laurent Léonard <laurent@open-minds.org>, 2009, 2010.
-# Boris BARNIER <b.barnier@gmail.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: virt-manager.tip\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-25 09:36-0400\n"
-"PO-Revision-Date: 2010-08-28 15:30+0200\n"
+"PO-Revision-Date: 2010-09-05 20:58+0200\n"
 "Last-Translator: Laurent Léonard <laurent@open-minds.org>\n"
 "Language-Team: French <trans-fr@lists.fedoraproject.org>\n"
 "MIME-Version: 1.0\n"
@@ -2610,11 +2609,12 @@ msgstr "Propulsé par libvirt"
 #: ../src/vmm-about.glade.h:4
 msgid "translator-credits"
 msgstr ""
-"Damien Durand <splinux@fedoraproject.org>, 2006.Thomas Canniot <thomas."
-"canniot@laposte.net>, 2006, 2007.Alain PORTAL <aportal@univ-montp2.fr>, "
-"2006, 2007.Decroux Fabien <fdecroux@redhat.com>, 2006.Gauthier Ancelin "
-"<gauthier.ancelin@laposte.net>, 2007, 2008.Laurent Léonard <laurent@open-"
-"minds.org>, 2009, 2010.Boris BARNIER <b.barnier@gmail.com>, 2010."
+"Damien Durand <splinux@fedoraproject.org>\n"
+"Thomas Canniot <thomas.canniot@laposte.net>\n"
+"Alain PORTAL <aportal@univ-montp2.fr>\n"
+"Decroux Fabien <fdecroux@redhat.com>\n"
+"Gauthier Ancelin <gauthier.ancelin@laposte.net>\n"
+"Laurent Léonard <laurent@open-minds.org>"
 
 #: ../src/vmm-add-hardware.glade.h:1
 msgid "<b>Character Device</b>"
