--- a/po/ja.po
+++ b/po/ja.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: ja\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-25 09:36-0400\n"
-"PO-Revision-Date: 2010-08-29 02:02+0900\n"
-"Last-Translator: Kurose Shushi <md81bird@hitaki.net>\n"
+"PO-Revision-Date: 2010-09-10 15:47+0900\n"
+"Last-Translator: Hajime TAIRA <htaira@redhat.com>\n"
 "Language-Team: Japanese <jp@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,11 +70,11 @@ msgstr "デフォルトのイメージパス"
 
 #: ../src/virt-manager.schemas.in.h:7
 msgid "Default manager window height"
-msgstr "デフォルトのマネージャーウィンドウの高さ"
+msgstr "デフォルトのウィンドウの高さ"
 
 #: ../src/virt-manager.schemas.in.h:8
 msgid "Default manager window width"
-msgstr "デフォルトのマネージャーウィンドウの幅"
+msgstr "デフォルトのウィンドウの幅"
 
 #: ../src/virt-manager.schemas.in.h:9
 msgid "Default media path"
@@ -150,15 +150,15 @@ msgstr "アプリケーションの実行中にシステムトレイアイコン
 
 #: ../src/virt-manager.schemas.in.h:27
 msgid "Show the cpu usage field in the domain list summary view"
-msgstr "ドメイン一覧のサマリビューに CPU 使用率を表示"
+msgstr "仮想マシン一覧のサマリビューに CPU 使用率を表示"
 
 #: ../src/virt-manager.schemas.in.h:28
 msgid "Show the disk I/O field in the domain list summary view"
-msgstr "ドメイン一覧のサマリビューにディスク I/O を表示"
+msgstr "仮想マシン一覧のサマリビューにディスク I/O を表示"
 
 #: ../src/virt-manager.schemas.in.h:29
 msgid "Show the network I/O field in the domain list summary view"
-msgstr "ドメイン一覧のサマリビューにネットワーク I/O を表示"
+msgstr "仮想マシン一覧のサマリビューにネットワーク I/O を表示"
 
 #: ../src/virt-manager.schemas.in.h:30
 msgid "The length of the list of URLs"
@@ -190,7 +190,7 @@ msgstr "コンソールのキーボード入力をいつ取得するか"
 
 #: ../src/virt-manager.schemas.in.h:37
 msgid "When to pop up a console for a guest"
-msgstr "ゲストのコンソールをいつポップアップするか"
+msgstr "ゲストOSのコンソールをいつポップアップするか"
 
 #: ../src/virt-manager.schemas.in.h:38
 msgid "When to scale the VM graphical console"
@@ -202,15 +202,15 @@ msgstr "仮想マシンのグラフィカルコンソールのサイズをいつ
 
 #: ../src/virt-manager.schemas.in.h:40
 msgid "Whether or not the app will poll VM disk i/o statistics"
-msgstr "アプリケーションに仮想マシンのディスク I/O の統計を取得させるかどうか"
+msgstr "仮想マシンマネージャーで仮想マシンのディスク I/O の統計を取得させるかどうか"
 
 #: ../src/virt-manager.schemas.in.h:41
 msgid "Whether or not the app will poll VM network i/o statistics"
-msgstr "アプリケーションに仮想マシンのネットワーク I/O の統計を取得させるかどうか"
+msgstr "仮想マシンマネージャーで仮想マシンのネットワーク I/O の統計を取得させるかどうか"
 
 #: ../src/virt-manager.schemas.in.h:42
 msgid "Whether to grab keyboard input for a guest console. 0 = never, 1 = only when in full screen mode, 2 = when mouse is over console"
-msgstr "ゲストコンソール用にキーボード入力を取得するかどうか。0 = しない、1 = フルスクリーンモードの場合のみ、 2 = マウスがコンソール上にある場合"
+msgstr "ゲストOSに対してキーボードのフォーカスを取得するかどうか。0 = しない、1 = フルスクリーンモードの場合のみ、 2 = マウスがコンソール上にある場合"
 
 #: ../src/virt-manager.schemas.in.h:43
 msgid "Whether to install a sound device for local VMs or not"
@@ -222,7 +222,7 @@ msgstr "リモートの仮想マシンに対してサウンドデバイスを搭
 
 #: ../src/virt-manager.schemas.in.h:45
 msgid "Whether to pop up a console for a guest. 0 = never, 1 = only on creation of a new guest, 2 = On creation of any guest"
-msgstr "仮想マシン用のコンソールをポップアップするかどうか。0 = しない、1 = 新規ゲストの作成時のみ、2 = すべてのゲストの作成時に"
+msgstr "ゲストOSのコンソールをポップアップするかどうか。0 = しない、1 = 仮想マシンの作成時のみ、2 = すべての仮想マシン作成時に"
 
 #: ../src/virt-manager.schemas.in.h:46
 msgid "Whether to show VM button toolbar in Details display"
@@ -238,7 +238,7 @@ msgstr "コンソールの中でマウスをつかまえた時、通知のヒン
 
 #: ../src/virt-manager.schemas.in.h:49
 msgid "Whether to show toolbar containing Virtual Machine action buttons (such as Run, Pause, Shutdown) in the details display"
-msgstr "詳細表示で、仮想マシンのアクションボタン(実行、一時停止、シャットダウンなど)を含むツールバーを表示するかどうか"
+msgstr "詳細表示で仮想マシンのアクションボタン(実行、一時停止、シャットダウンなど)を含むツールバーを表示するかどうか"
 
 #: ../src/virt-manager.schemas.in.h:50
 msgid "Whether we require confirmation to forcepoweroff a VM"
@@ -4631,16 +4631,22 @@ msgstr "ローカルを参照(_B)"
 
 #~ msgid "ip desc"
 #~ msgstr "ip desc"
+
 #~ msgid "No VMs available"
 #~ msgstr "仮想マシンが利用できません"
+
 #~ msgid "Host CPUs:"
 #~ msgstr "ホストの CPU数:"
+
 #~ msgid "_Host Details"
 #~ msgstr "ホストの詳細(_H)"
+
 #~ msgid "Connec_tion:"
 #~ msgstr "接続(_T):"
+
 #~ msgid "Hostname Field"
 #~ msgstr "ホスト名フィールド"
+
 #~ msgid ""
 #~ "Local\n"
 #~ "Remote Password or Kerberos\n"
@@ -4651,6 +4657,6 @@ msgstr "ローカルを参照(_B)"
 #~ "リモートパスワード または Kerberos\n"
 #~ "x509 証明書でのリモート SSL/TLS\n"
 #~ "SSH によるリモートトンネル"
+
 #~ msgid "<b>Consoles</b>"
 #~ msgstr "<b>コンソール</b>"
-
