Add virDomainSetMigrateMaxDowntime support

--- a/AUTHORS
+++ b/AUTHORS
@@ -67,6 +67,7 @@ Further patches have been submitted by:
   Marc Deslauriers <marc.deslauriers-at-ubuntu-dot-com>
   Matthias Fulz <olz1983-at-googlemail-dot-com>
   Niels de Vos <ndevos-at-redhat-dot-com>
+  Wen Congyang <wency-at-cn-dot-fujitsu-dot-com>
 
   <...send a patch & get your name here...>
 
