Fix translation error in as.po (bz 634049)

--- a/po/as.po
+++ b/po/as.po
@@ -2198,11 +2198,11 @@ msgstr "সংৰক্ষণ (_S)"
 #: ../src/virtManager/manager.py:343
 #, fuzzy
 msgid "_Clone..."
-msgstr "ক্লোন করুন...(_C)করুন...(_C)করুন...(_C)কৰক...(_C)"
+msgstr "কৃত্তক কৰক... (_C)"
 
 #: ../src/virtManager/manager.py:344 ../src/vmm-details.glade.h:124
 msgid "_Migrate..."
-msgstr "প্ৰব্ৰজন (_M)M)M)M)"
+msgstr "প্ৰব্ৰজন... (_M)"
 
 #: ../src/virtManager/manager.py:345
 #, fuzzy
